# claude-code-agentic-engineering

./: .gitignore  ALIASES.md  CIRCLE_STRUCTURE.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMMAND_REFACTORING_RECOMMENDATIONS.md  CONTRIBUTING.md  DOWNLOAD_SYSTEM_COMPLETE.md  INTERACTIVE_PLANNING.md  LICENSE  NEW_FEATURES.md  PATTERN_COMPLIANCE.md  README.md  SETUP_COMPLETE.md  SKILLS_MIGRATION_GUIDE.md  SKILL_IMPROVEMENT_RECOMMENDATIONS.md  install.ps1  install.sh  pyproject.toml  setup-aliases.ps1  setup-aliases.sh  setup.ps1  setup.sh
.claude-marketplace/: marketplace.json
.claude-plugin/: marketplace.json
agents/: architecture-explorer.md  best-practices-generator.md  code-implementer.md  code-reviewer-mini.md  code-reviewer.md  codebase-analyst.md  dependency-mapper.md  dependency-scanner-agent.md  documentation-extractor-agent.md  feature-finder.md  file-analysis-agent.md  git-history-agent.md  implementation-strategist.md  pattern-recognition-agent.md  quality-assurance-agent.md  standards-compliance-agent.md  standards-generator.md
commands/: 1_get_context.md  1_task_from_scratch.md  1_ticket-mini.md  1_ticket.md  2_plan-mini.md  2_plan.md  2_plan_from_task.md  2_task_from_scratch.md  3_implement-mini.md  3_implement.md  3_implement_plan.md  3_plan_from_task.md  4_implement_plan.md  4_review-mini.md  4_review.md  4_review_implementation.md  5_review_implementation.md  6_update_context.md  _OUTPUT_FORMAT_GUIDE.md  all.md  checks.md  context-map.md  download-templates.md  fix-pr-comments.md  get-context.md  implement-plan.md  plan-from-task.md  review-implementation.md  standards-mini.md  standards.md  task-from-scratch.md  update-context.md  workflow-connect.md  workflow-status.md
docs/: CUSTOMIZATION.md  WORKFLOW_GUIDE.md  transcription.md
examples/: basic-workflow.md
plugin/: README.md
templates/: README.md  code-review-template.md  coding-standards-template.md  implementation-plan-template.md  (+3 more)
(+91 files in other folders)
